--- a/cmd/cert-managerctl/app/get/BUILD.bazel
+++ b/cmd/cert-managerctl/app/get/BUILD.bazel
@@ -2,12 +2,14 @@ load("@io_bazel_rules_go//go:def.bzl", "go_library")
 
 go_library(
     name = "go_default_library",
-    srcs = ["types.go"],
-    importpath = "github.com/jetstack/cert-manager/cmd/cert-managerctl/app/apis/cert-managerctl/v1alpha1",
+    srcs = ["get.go"],
+    importpath = "github.com/jetstack/cert-manager/cmd/cert-managerctl/app/get",
     visibility = ["//visibility:public"],
     deps = [
+        "//cmd/cert-managerctl/app/apis/cert-managerctl/v1alpha1:go_default_library",
+        "//cmd/cert-managerctl/app/client:go_default_library",
+        "//pkg/api/util:go_default_library",
         "//pkg/apis/certmanager/v1alpha2:go_default_library",
-        "//vendor/k8s.io/apimachinery/pkg/apis/meta/v1:go_default_library",
     ],
 )
 
