--- a/cmd/cert-managerctl/app/request/BUILD.bazel
+++ b/cmd/cert-managerctl/app/request/BUILD.bazel
@@ -2,11 +2,20 @@ load("@io_bazel_rules_go//go:def.bzl", "go_library")
 
 go_library(
     name = "go_default_library",
-    srcs = ["types.go"],
-    importpath = "github.com/jetstack/cert-manager/cmd/cert-managerctl/app/apis/cert-managerctl/v1alpha1",
+    srcs = [
+        "cert.go",
+        "request.go",
+    ],
+    importpath = "github.com/jetstack/cert-manager/cmd/cert-managerctl/app/request",
     visibility = ["//visibility:public"],
     deps = [
+        "//cmd/cert-managerctl/app/apis/cert-managerctl/v1alpha1:go_default_library",
+        "//cmd/cert-managerctl/app/client:go_default_library",
+        "//cmd/cert-managerctl/app/util:go_default_library",
+        "//pkg/api/util:go_default_library",
         "//pkg/apis/certmanager/v1alpha2:go_default_library",
+        "//pkg/util/pki:go_default_library",
+        "//vendor/github.com/sirupsen/logrus:go_default_library",
         "//vendor/k8s.io/apimachinery/pkg/apis/meta/v1:go_default_library",
     ],
 )
