--- a/docs/tutorials/acme/quick-start/example/staging-issuer.yaml
+++ b/docs/tutorials/acme/quick-start/example/staging-issuer.yaml
@@ -1,4 +1,4 @@
-   apiVersion: certmanager.k8s.io/v1alpha2
+   apiVersion: cert-manager.io/v1alpha2
    kind: Issuer
    metadata:
      name: letsencrypt-staging
