--- a/cmd/controller/app/options/BUILD.bazel
+++ b/cmd/controller/app/options/BUILD.bazel
@@ -6,6 +6,7 @@ go_library(
     importpath = "github.com/jetstack/cert-manager/cmd/controller/app/options",
     visibility = ["//visibility:public"],
     deps = [
+        "//pkg/apis/certmanager:go_default_library",
         "//pkg/apis/certmanager/v1alpha2:go_default_library",
         "//pkg/controller/acmechallenges:go_default_library",
         "//pkg/controller/acmeorders:go_default_library",
