make the webhook port configurable
in GKE private clusters, by default masters are allowed to talk to the
cluster nodes only on 443 and 10250. so configuring secure_port: 443,
will work out of the box without needing to add fw rules

--- a/deploy/charts/cert-manager/templates/webhook-deployment.yaml
+++ b/deploy/charts/cert-manager/templates/webhook-deployment.yaml
@@ -47,7 +47,7 @@ spec:
           {{- if .Values.global.logLevel }}
           - --v={{ .Values.global.logLevel }}
           {{- end }}
-          - --secure-port=6443
+          - --secure-port={{ .Values.webhook.secure_port }}
           - --tls-cert-file=/certs/tls.crt
           - --tls-private-key-file=/certs/tls.key
         {{- if .Values.webhook.extraArgs }}
@@ -60,6 +60,12 @@ spec:
                 fieldPath: metadata.namespace
           resources:
 {{ toYaml .Values.webhook.resources | indent 12 }}
+          securityContext:
+            capabilities:
+              add:
+              - NET_BIND_SERVICE
+              drop:
+              - ALL
           volumeMounts:
           - name: certs
             mountPath: /certs
