Set python_version for verify-boilerplate
Signed-off-by: James Munnelly <james@munnelly.eu>

--- a/hack/BUILD.bazel
+++ b/hack/BUILD.bazel
@@ -7,6 +7,7 @@ py_test(
     srcs = ["verify_boilerplate.py"],
     data = ["//:all-srcs"],
     main = "verify_boilerplate.py",
+    python_version = "PY3",
     tags = ["lint"],
 )
 
