--- a/hack/BUILD.bazel
+++ b/hack/BUILD.bazel
@@ -212,18 +212,25 @@ sh_test(
 sh_binary(
     name = "update-reference-docs",
     srcs = ["update-reference-docs.sh"],
+    args = [
+        "$(location @//docs/generated/reference/generate)",
+    ],
     data = [
-        "//docs/generated/reference/generate",
+        "@//docs/generated/reference/generate",
     ],
 )
 
 sh_test(
     name = "verify-reference-docs",
     srcs = ["verify-reference-docs.sh"],
+    args = [
+        "$(location :update-reference-docs)",
+        "$(location @//docs/generated/reference/generate)",
+    ],
     data = [
-        "//docs/generated/reference:output",
-        "//docs/generated/reference/generate",
-        "//hack:update-reference-docs.sh",
+        ":update-reference-docs",
+        "@//docs/generated/reference:output",
+        "@//docs/generated/reference/generate",
     ],
 )
 
