Improve verify-errexit UX
Signed-off-by: James Munnelly <james@munnelly.eu>

--- a/hack/BUILD.bazel
+++ b/hack/BUILD.bazel
@@ -15,7 +15,7 @@ sh_test(
     name = "verify-errexit",
     srcs = ["verify-errexit.sh"],
     data = [
-        "//:all-srcs",
+        "@//:all-srcs",
     ],
     tags = ["lint"],
 )
