--- a/hack/BUILD.bazel
+++ b/hack/BUILD.bazel
@@ -24,7 +24,7 @@ sh_test(
     name = "verify-links",
     srcs = ["verify-links.sh"],
     data = [
-        "//:all-srcs",
+        "@//:all-srcs",
     ],
     tags = ["lint"],
 )
