--- a/test/e2e/suite/conformance/certificates/venafi/BUILD.bazel
+++ b/test/e2e/suite/conformance/certificates/venafi/BUILD.bazel
@@ -2,21 +2,18 @@ load("@io_bazel_rules_go//go:def.bzl", "go_library")
 
 go_library(
     name = "go_default_library",
-    srcs = ["acme.go"],
-    importpath = "github.com/jetstack/cert-manager/test/e2e/suite/conformance/certificates/acme",
+    srcs = ["venafi.go"],
+    importpath = "github.com/jetstack/cert-manager/test/e2e/suite/conformance/certificates/venafi",
     visibility = ["//visibility:public"],
     deps = [
-        "//pkg/apis/acme/v1alpha2:go_default_library",
         "//pkg/apis/certmanager/v1alpha2:go_default_library",
         "//pkg/apis/meta/v1:go_default_library",
         "//test/e2e/framework:go_default_library",
-        "//test/e2e/framework/addon/pebble:go_default_library",
-        "//test/e2e/framework/addon/tiller:go_default_library",
+        "//test/e2e/framework/util/errors:go_default_library",
         "//test/e2e/suite/conformance/certificates:go_default_library",
-        "//test/e2e/suite/issuers/acme/dnsproviders:go_default_library",
+        "//test/e2e/suite/issuers/venafi/addon:go_default_library",
         "@com_github_onsi_ginkgo//:go_default_library",
         "@com_github_onsi_gomega//:go_default_library",
-        "@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library",
     ],
 )
 
