Move crd generation macro into hack/build
Signed-off-by: James Munnelly <james@munnelly.eu>

--- a/deploy/manifests/BUILD.bazel
+++ b/deploy/manifests/BUILD.bazel
@@ -1,9 +1,10 @@
 exports_files(["00-crds.yaml"])
 
-load(":def.bzl", "generated_crds")
+load("//hack/build:crds.bzl", "generated_crds")
 
 generated_crds(
     name = "00-crds",
+    out = "crds.yaml.generated",
     go_prefix = "github.com/jetstack/cert-manager",
     paths = [
         "./pkg/apis/...",
