Run hack/update-bazel.sh
Signed-off-by: James Munnelly <james@munnelly.eu>

--- a/hack/BUILD.bazel
+++ b/hack/BUILD.bazel
@@ -298,6 +298,7 @@ filegroup(
         ":package-srcs",
         "//hack/bin:all-srcs",
         "//hack/boilerplate:all-srcs",
+        "//hack/build:all-srcs",
         "//hack/release:all-srcs",
     ],
     tags = ["automanaged"],
