--- a/docs/tutorials/acme/quick-start/example/deployment.yaml
+++ b/docs/tutorials/acme/quick-start/example/deployment.yaml
@@ -1,8 +1,11 @@
-apiVersion: extensions/v1beta1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: kuard
 spec:
+  selector:
+    matchLabels:
+      app: kuard
   replicas: 1
   template:
     metadata:
