--- a/pkg/issuer/acme/dns/clouddns/BUILD.bazel
+++ b/pkg/issuer/acme/dns/clouddns/BUILD.bazel
@@ -9,8 +9,8 @@ go_library(
         "//pkg/issuer/acme/dns/util:go_default_library",
         "@io_k8s_klog//:go_default_library",
         "@org_golang_google_api//dns/v1:go_default_library",
+        "@org_golang_google_api//option:go_default_library",
         "@org_golang_x_net//context:go_default_library",
-        "@org_golang_x_oauth2//:go_default_library",
         "@org_golang_x_oauth2//google:go_default_library",
     ],
 )
