Fix values and README for helm chart
Some values were miscategorised (`global.priorityClassName`,
`global.leaderElection.namespace`) while others were missing
(`webhook.affinity`). Some were missing documented default values.

Signed-off-by: Lachlan Cooper <lachlancooper@gmail.com>

--- a/deploy/charts/cert-manager/cainjector/values.yaml
+++ b/deploy/charts/cert-manager/cainjector/values.yaml
@@ -37,6 +37,10 @@ resources: {}
 
 nodeSelector: {}
 
+affinity: {}
+
+tolerations: []
+
 image:
   repository: quay.io/jetstack/cert-manager-cainjector
   # Override the image tag to deploy by setting this variable.
