--- a/deploy/charts/cert-manager/values.yaml
+++ b/deploy/charts/cert-manager/values.yaml
@@ -132,6 +132,10 @@ webhook:
 
   nodeSelector: {}
 
+  affinity: {}
+
+  tolerations: []
+
   image:
     repository: quay.io/jetstack/cert-manager-webhook
     # Override the image tag to deploy by setting this variable.
