Adds comment to helm chart with the verbosity levels
Signed-off-by: JoshVanL <vleeuwenjoshua@gmail.com>

--- a/deploy/charts/cert-manager/values.yaml
+++ b/deploy/charts/cert-manager/values.yaml
@@ -17,6 +17,7 @@ global:
   podSecurityPolicy:
     enabled: false
 
+  # Set the verbosity of cert-manager. Range of 0 - 6 with 6 being the most verbose.
   logLevel: 2
 
   leaderElection:
