Adds CLI migration tool with docs on how to use it
Signed-off-by: JoshVanL <vleeuwenjoshua@gmail.com>

--- a/hack/BUILD.bazel
+++ b/hack/BUILD.bazel
@@ -296,6 +296,7 @@ filegroup(
     name = "all-srcs",
     srcs = [
         ":package-srcs",
+        "//hack/api-migration:all-srcs",
         "//hack/bin:all-srcs",
         "//hack/boilerplate:all-srcs",
         "//hack/build:all-srcs",
