--- a/pkg/controller/certificates/BUILD.bazel
+++ b/pkg/controller/certificates/BUILD.bazel
@@ -51,6 +51,7 @@ go_test(
         "//pkg/api/util:go_default_library",
         "//pkg/apis/certmanager/v1alpha2:go_default_library",
         "//pkg/apis/meta/v1:go_default_library",
+        "//pkg/controller:go_default_library",
         "//pkg/controller/test:go_default_library",
         "//pkg/util:go_default_library",
         "//pkg/util/pki:go_default_library",
