Print 'kubectl apply' output during e2e tests
Signed-off-by: James Munnelly <james@munnelly.eu>

--- a/test/e2e/framework/addon/certmanager/BUILD.bazel
+++ b/test/e2e/framework/addon/certmanager/BUILD.bazel
@@ -10,6 +10,7 @@ go_library(
         "//test/e2e/framework/addon/chart:go_default_library",
         "//test/e2e/framework/addon/tiller:go_default_library",
         "//test/e2e/framework/config:go_default_library",
+        "//test/e2e/framework/log:go_default_library",
     ],
 )
 
