--- a/pkg/webhook/handlers/testdata/apis/testgroup/BUILD.bazel
+++ b/pkg/webhook/handlers/testdata/apis/testgroup/BUILD.bazel
@@ -31,6 +31,7 @@ filegroup(
         "//pkg/webhook/handlers/testdata/apis/testgroup/fuzzer:all-srcs",
         "//pkg/webhook/handlers/testdata/apis/testgroup/install:all-srcs",
         "//pkg/webhook/handlers/testdata/apis/testgroup/v1:all-srcs",
+        "//pkg/webhook/handlers/testdata/apis/testgroup/validation:all-srcs",
     ],
     tags = ["automanaged"],
     visibility = ["//visibility:public"],
