--- a/deploy/charts/cert-manager/templates/webhook-validating-webhook.yaml
+++ b/deploy/charts/cert-manager/templates/webhook-validating-webhook.yaml
@@ -36,6 +36,16 @@ webhooks:
           - issuers
           - clusterissuers
           - certificaterequests
+      - apiGroups:
+          - "acme.cert-manager.io"
+        apiVersions:
+          - v1alpha2
+        operations:
+          - CREATE
+          - UPDATE
+        resources:
+          - orders
+          - challenges
     failurePolicy: Fail
     sideEffects: None
     clientConfig:
