enable cert-manager using --kubeconfig to connect API Server with kubeconfig file
Signed-off-by: chenjun.cj <chenjun.cj@alibaba-inc.com>

--- a/cmd/controller/app/BUILD.bazel
+++ b/cmd/controller/app/BUILD.bazel
@@ -16,7 +16,6 @@ go_library(
         "//pkg/logs:go_default_library",
         "//pkg/metrics:go_default_library",
         "//pkg/util:go_default_library",
-        "//pkg/util/kube:go_default_library",
         "@io_k8s_api//core/v1:go_default_library",
         "@io_k8s_apimachinery//pkg/api/resource:go_default_library",
         "@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library",
@@ -25,6 +24,7 @@ go_library(
         "@io_k8s_client_go//kubernetes/scheme:go_default_library",
         "@io_k8s_client_go//kubernetes/typed/core/v1:go_default_library",
         "@io_k8s_client_go//rest:go_default_library",
+        "@io_k8s_client_go//tools/clientcmd:go_default_library",
         "@io_k8s_client_go//tools/leaderelection:go_default_library",
         "@io_k8s_client_go//tools/leaderelection/resourcelock:go_default_library",
         "@io_k8s_client_go//tools/record:go_default_library",
