--- a/deploy/manifests/00-crds.yaml
+++ b/deploy/manifests/00-crds.yaml
@@ -81,9 +81,7 @@ spec:
               type: string
             solver:
               description: Solver contains the domain solving configuration that should
-                be used to solve this challenge resource. Only **one** of 'config'
-                or 'solver' may be specified, and if both are specified then no action
-                will be performed on the Challenge resource.
+                be used to solve this challenge resource.
               properties:
                 dns01:
                   properties:
