--- a/deploy/charts/cert-manager/templates/webhook-psp-clusterrolebinding.yaml
+++ b/deploy/charts/cert-manager/templates/webhook-psp-clusterrolebinding.yaml
@@ -2,18 +2,18 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
-  name: {{ template "cert-manager.fullname" . }}-psp
+  name: {{ template "webhook.fullname" . }}-psp
   labels:
-    app: {{ include "cert-manager.name" . }}
-    chart: {{ include "cert-manager.chart" . }}
+    app: {{ include "webhook.name" . }}
+    chart: {{ include "webhook.chart" . }}
     release: {{ .Release.Name }}
     heritage: {{ .Release.Service }}
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
-  name: {{ template "cert-manager.fullname" . }}-psp
+  name: {{ template "webhook.fullname" . }}-psp
 subjects:
   - kind: ServiceAccount
-    name: {{ include "cert-manager.fullname" . }}
+    name: {{ include "webhook.fullname" . }}
     namespace: {{ .Release.Namespace }}
 {{- end }}
