--- a/cmd/acmesolver/BUILD.bazel
+++ b/cmd/acmesolver/BUILD.bazel
@@ -1,9 +1,15 @@
 load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
-load("//hack/build:docker.bzl", "image")
+load("//hack/build:docker.bzl", "covered_image", "image")
 
 image(
     name = "image",
     binary = ":acmesolver",
+    component = "acmesolver",
+    visibility = ["//visibility:public"],
+)
+
+covered_image(
+    name = "image.covered",
     component = "acmesolver",
     visibility = ["//visibility:public"],
 )
