Run a single instance of Pebble during the e2e suite
Signed-off-by: James Munnelly <james@munnelly.eu>

--- a/test/e2e/framework/addon/BUILD.bazel
+++ b/test/e2e/framework/addon/BUILD.bazel
@@ -10,6 +10,7 @@ go_library(
         "//test/e2e/framework/addon/base:go_default_library",
         "//test/e2e/framework/addon/certmanager:go_default_library",
         "//test/e2e/framework/addon/nginxingress:go_default_library",
+        "//test/e2e/framework/addon/pebble:go_default_library",
         "//test/e2e/framework/addon/tiller:go_default_library",
         "//test/e2e/framework/config:go_default_library",
         "//test/e2e/framework/log:go_default_library",
