--- a/pkg/webhook/BUILD.bazel
+++ b/pkg/webhook/BUILD.bazel
@@ -29,6 +29,7 @@ filegroup(
     srcs = [
         ":package-srcs",
         "//pkg/webhook/handlers:all-srcs",
+        "//pkg/webhook/server:all-srcs",
     ],
     tags = ["automanaged"],
     visibility = ["//visibility:public"],
