--- a/cmd/webhook/BUILD.bazel
+++ b/cmd/webhook/BUILD.bazel
@@ -18,9 +18,10 @@ go_library(
         "//pkg/logs:go_default_library",
         "//pkg/webhook:go_default_library",
         "//pkg/webhook/handlers:go_default_library",
-        "@com_github_openshift_generic_admission_server//pkg/cmd:go_default_library",
+        "//pkg/webhook/server:go_default_library",
         "@io_k8s_apimachinery//pkg/runtime/schema:go_default_library",
         "@io_k8s_klog//:go_default_library",
+        "@io_k8s_klog//klogr:go_default_library",
     ],
 )
 
