feat: added dyn.com issuer
Co-authored-by: Nicolai Rybnikar <588438+rybnico@users.noreply.github.com>

Signed-off-by: Patrick Geschinski <PG2000@users.noreply.github.com>

--- a/deploy/charts/cert-manager/crds/challenges.yaml
+++ b/deploy/charts/cert-manager/crds/challenges.yaml
@@ -285,6 +285,36 @@ spec:
                               description: 'Name of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#names
                                 TODO: Add other useful fields. apiVersion, kind, uid?'
                               type: string
+                    dyndns:
+                      description: ACMEIssuerDNS01ProviderDynDNS is a structure containing
+                        the DNS configuration for DynDNS DNS—Zone Record Management
+                        API
+                      type: object
+                      required:
+                      - customerName
+                      - passwordSecretRef
+                      - username
+                      - zonename
+                      properties:
+                        customerName:
+                          type: string
+                        passwordSecretRef:
+                          type: object
+                          required:
+                          - name
+                          properties:
+                            key:
+                              description: The key of the secret to select from. Must
+                                be a valid secret key.
+                              type: string
+                            name:
+                              description: 'Name of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#names
+                                TODO: Add other useful fields. apiVersion, kind, uid?'
+                              type: string
+                        username:
+                          type: string
+                        zonename:
+                          type: string
                     rfc2136:
                       description: ACMEIssuerDNS01ProviderRFC2136 is a structure containing
                         the configuration for RFC2136 DNS
