--- a/deploy/manifests/00-crds.yaml
+++ b/deploy/manifests/00-crds.yaml
@@ -703,6 +703,36 @@ spec:
                               description: 'Name of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#names
                                 TODO: Add other useful fields. apiVersion, kind, uid?'
                               type: string
+                    dyndns:
+                      description: ACMEIssuerDNS01ProviderDynDNS is a structure containing
+                        the DNS configuration for DynDNS DNS—Zone Record Management
+                        API
+                      type: object
+                      required:
+                      - customerName
+                      - passwordSecretRef
+                      - username
+                      - zonename
+                      properties:
+                        customerName:
+                          type: string
+                        passwordSecretRef:
+                          type: object
+                          required:
+                          - name
+                          properties:
+                            key:
+                              description: The key of the secret to select from. Must
+                                be a valid secret key.
+                              type: string
+                            name:
+                              description: 'Name of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#names
+                                TODO: Add other useful fields. apiVersion, kind, uid?'
+                              type: string
+                        username:
+                          type: string
+                        zonename:
+                          type: string
                     rfc2136:
                       description: ACMEIssuerDNS01ProviderRFC2136 is a structure containing
                         the configuration for RFC2136 DNS
@@ -2065,6 +2095,38 @@ spec:
                                       TODO: Add other useful fields. apiVersion, kind,
                                       uid?'
                                     type: string
+                          dyndns:
+                            description: ACMEIssuerDNS01ProviderDynDNS is a structure
+                              containing the DNS configuration for DynDNS DNS—Zone
+                              Record Management API
+                            type: object
+                            required:
+                            - customerName
+                            - passwordSecretRef
+                            - username
+                            - zonename
+                            properties:
+                              customerName:
+                                type: string
+                              passwordSecretRef:
+                                type: object
+                                required:
+                                - name
+                                properties:
+                                  key:
+                                    description: The key of the secret to select from.
+                                      Must be a valid secret key.
+                                    type: string
+                                  name:
+                                    description: 'Name of the referent. More info:
+                                      https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#names
+                                      TODO: Add other useful fields. apiVersion, kind,
+                                      uid?'
+                                    type: string
+                              username:
+                                type: string
+                              zonename:
+                                type: string
                           rfc2136:
                             description: ACMEIssuerDNS01ProviderRFC2136 is a structure
                               containing the configuration for RFC2136 DNS
@@ -3721,6 +3783,38 @@ spec:
                                       TODO: Add other useful fields. apiVersion, kind,
                                       uid?'
                                     type: string
+                          dyndns:
+                            description: ACMEIssuerDNS01ProviderDynDNS is a structure
+                              containing the DNS configuration for DynDNS DNS—Zone
+                              Record Management API
+                            type: object
+                            required:
+                            - customerName
+                            - passwordSecretRef
+                            - username
+                            - zonename
+                            properties:
+                              customerName:
+                                type: string
+                              passwordSecretRef:
+                                type: object
+                                required:
+                                - name
+                                properties:
+                                  key:
+                                    description: The key of the secret to select from.
+                                      Must be a valid secret key.
+                                    type: string
+                                  name:
+                                    description: 'Name of the referent. More info:
+                                      https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#names
+                                      TODO: Add other useful fields. apiVersion, kind,
+                                      uid?'
+                                    type: string
+                              username:
+                                type: string
+                              zonename:
+                                type: string
                           rfc2136:
                             description: ACMEIssuerDNS01ProviderRFC2136 is a structure
                               containing the configuration for RFC2136 DNS
