--- a/pkg/issuer/acme/dns/BUILD.bazel
+++ b/pkg/issuer/acme/dns/BUILD.bazel
@@ -18,6 +18,7 @@ go_library(
         "//pkg/issuer/acme/dns/clouddns:go_default_library",
         "//pkg/issuer/acme/dns/cloudflare:go_default_library",
         "//pkg/issuer/acme/dns/digitalocean:go_default_library",
+        "//pkg/issuer/acme/dns/dyndns:go_default_library",
         "//pkg/issuer/acme/dns/rfc2136:go_default_library",
         "//pkg/issuer/acme/dns/route53:go_default_library",
         "//pkg/issuer/acme/dns/util:go_default_library",
@@ -73,6 +74,7 @@ filegroup(
         "//pkg/issuer/acme/dns/clouddns:all-srcs",
         "//pkg/issuer/acme/dns/cloudflare:all-srcs",
         "//pkg/issuer/acme/dns/digitalocean:all-srcs",
+        "//pkg/issuer/acme/dns/dyndns:all-srcs",
         "//pkg/issuer/acme/dns/rfc2136:all-srcs",
         "//pkg/issuer/acme/dns/route53:all-srcs",
         "//pkg/issuer/acme/dns/util:all-srcs",
