Use schemapatch to generate openapi schemas
Signed-off-by: James Munnelly <james@munnelly.eu>

--- a/deploy/BUILD.bazel
+++ b/deploy/BUILD.bazel
@@ -7,8 +7,10 @@ filegroup(
 
 filegroup(
     name = "all-srcs",
-    srcs = glob(["**/*"]) + [
+    srcs = [
         ":package-srcs",
+        "//deploy/manifests:all-srcs",
     ],
+    tags = ["automanaged"],
     visibility = ["//visibility:public"],
 )
