--- a/pkg/internal/apis/certmanager/fuzzer/BUILD.bazel
+++ b/pkg/internal/apis/certmanager/fuzzer/BUILD.bazel
@@ -7,6 +7,7 @@ go_library(
     visibility = ["//pkg:__subpackages__"],
     deps = [
         "//pkg/apis/certmanager/v1alpha2:go_default_library",
+        "//pkg/internal/apis/acme/fuzzer:go_default_library",
         "//pkg/internal/apis/certmanager:go_default_library",
         "@com_github_google_gofuzz//:go_default_library",
         "@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library",
