Remove reference to metav1.ObjectMeta
Signed-off-by: James Munnelly <james@munnelly.eu>

--- a/deploy/charts/cert-manager/crds/challenges.yaml
+++ b/deploy/charts/cert-manager/crds/challenges.yaml
@@ -436,6 +436,19 @@ spec:
                                 with in-built values, the values here will override
                                 the in-built values.
                               type: object
+                              properties:
+                                annotations:
+                                  description: Annotations that should be added to
+                                    the create ACME HTTP01 solver pods.
+                                  type: object
+                                  additionalProperties:
+                                    type: string
+                                labels:
+                                  description: Labels that should be added to the
+                                    created ACME HTTP01 solver pods.
+                                  type: object
+                                  additionalProperties:
+                                    type: string
                             spec:
                               description: PodSpec defines overrides for the HTTP01
                                 challenge solver pod. Only the 'nodeSelector', 'affinity'
