Set preserveUnknownFields: false
Signed-off-by: James Munnelly <james@munnelly.eu>

--- a/deploy/charts/cert-manager/crds/certificates.yaml
+++ b/deploy/charts/cert-manager/crds/certificates.yaml
@@ -26,6 +26,7 @@ spec:
     name: Age
     type: date
   group: cert-manager.io
+  preserveUnknownFields: false
   names:
     kind: Certificate
     listKind: CertificateList
