--- a/deploy/charts/cert-manager/crds/challenges.yaml
+++ b/deploy/charts/cert-manager/crds/challenges.yaml
@@ -22,6 +22,7 @@ spec:
     name: Age
     type: date
   group: acme.cert-manager.io
+  preserveUnknownFields: false
   names:
     kind: Challenge
     listKind: ChallengeList
