--- a/deploy/charts/cert-manager/crds/clusterissuers.yaml
+++ b/deploy/charts/cert-manager/crds/clusterissuers.yaml
@@ -19,6 +19,7 @@ spec:
     name: Age
     type: date
   group: cert-manager.io
+  preserveUnknownFields: false
   names:
     kind: ClusterIssuer
     listKind: ClusterIssuerList
