--- a/deploy/charts/cert-manager/crds/orders.yaml
+++ b/deploy/charts/cert-manager/crds/orders.yaml
@@ -23,6 +23,7 @@ spec:
     name: Age
     type: date
   group: acme.cert-manager.io
+  preserveUnknownFields: false
   names:
     kind: Order
     listKind: OrderList
