--- a/deploy/charts/cert-manager/crds/certificaterequests.yaml
+++ b/deploy/charts/cert-manager/crds/certificaterequests.yaml
@@ -23,6 +23,7 @@ spec:
     name: Age
     type: date
   group: cert-manager.io
+  preserveUnknownFields: false
   names:
     kind: CertificateRequest
     listKind: CertificateRequestList
