--- a/deploy/manifests/00-crds.yaml
+++ b/deploy/manifests/00-crds.yaml
@@ -23,6 +23,7 @@ spec:
     name: Age
     type: date
   group: cert-manager.io
+  preserveUnknownFields: false
   names:
     kind: CertificateRequest
     listKind: CertificateRequestList
@@ -216,6 +217,7 @@ spec:
     name: Age
     type: date
   group: cert-manager.io
+  preserveUnknownFields: false
   names:
     kind: Certificate
     listKind: CertificateList
@@ -455,6 +457,7 @@ spec:
     name: Age
     type: date
   group: acme.cert-manager.io
+  preserveUnknownFields: false
   names:
     kind: Challenge
     listKind: ChallengeList
@@ -1831,6 +1834,7 @@ spec:
     name: Age
     type: date
   group: cert-manager.io
+  preserveUnknownFields: false
   names:
     kind: ClusterIssuer
     listKind: ClusterIssuerList
@@ -3514,6 +3518,7 @@ spec:
     name: Age
     type: date
   group: cert-manager.io
+  preserveUnknownFields: false
   names:
     kind: Issuer
     listKind: IssuerList
@@ -5201,6 +5206,7 @@ spec:
     name: Age
     type: date
   group: acme.cert-manager.io
+  preserveUnknownFields: false
   names:
     kind: Order
     listKind: OrderList
