This commit fixes false/null fields in the helm charts Signed-off-by: Cole Kennedy <colek42@gmail.com>
Signed-off-by: Cole Kennedy <colek42@gmail.com>

--- a/deploy/charts/cert-manager/templates/cainjector-rbac.yaml
+++ b/deploy/charts/cert-manager/templates/cainjector-rbac.yaml
@@ -88,8 +88,7 @@ roleRef:
   kind: Role
   name: {{ template "cainjector.fullname" . }}:leaderelection
 subjects:
-  - apiGroup: ""
-    kind: ServiceAccount
+  - kind: ServiceAccount
     name: {{ include "cainjector.fullname" . }}
     namespace: {{ .Release.Namespace }}
 
