--- a/pkg/acme/client/BUILD.bazel
+++ b/pkg/acme/client/BUILD.bazel
@@ -11,7 +11,7 @@ go_library(
     visibility = ["//visibility:public"],
     deps = [
         "//pkg/metrics:go_default_library",
-        "//third_party/crypto/acme:go_default_library",
+        "@org_golang_x_crypto//acme:go_default_library",
     ],
 )
 
