--- a/pkg/acme/client/middleware/BUILD.bazel
+++ b/pkg/acme/client/middleware/BUILD.bazel
@@ -7,8 +7,8 @@ go_library(
     visibility = ["//visibility:public"],
     deps = [
         "//pkg/acme/client:go_default_library",
-        "//third_party/crypto/acme:go_default_library",
         "@io_k8s_klog//:go_default_library",
+        "@org_golang_x_crypto//acme:go_default_library",
     ],
 )
 
