--- a/pkg/controller/acmeorders/BUILD.bazel
+++ b/pkg/controller/acmeorders/BUILD.bazel
@@ -23,7 +23,6 @@ go_library(
         "//pkg/issuer:go_default_library",
         "//pkg/logs:go_default_library",
         "//pkg/metrics:go_default_library",
-        "//third_party/crypto/acme:go_default_library",
         "@com_github_go_logr_logr//:go_default_library",
         "@io_k8s_api//core/v1:go_default_library",
         "@io_k8s_apimachinery//pkg/api/errors:go_default_library",
@@ -37,6 +36,7 @@ go_library(
         "@io_k8s_client_go//tools/record:go_default_library",
         "@io_k8s_client_go//util/workqueue:go_default_library",
         "@io_k8s_utils//clock:go_default_library",
+        "@org_golang_x_crypto//acme:go_default_library",
     ],
 )
 
@@ -72,12 +72,12 @@ go_test(
         "//pkg/apis/meta/v1:go_default_library",
         "//pkg/controller/test:go_default_library",
         "//test/unit/gen:go_default_library",
-        "//third_party/crypto/acme:go_default_library",
         "@com_github_kr_pretty//:go_default_library",
         "@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library",
         "@io_k8s_apimachinery//pkg/runtime:go_default_library",
         "@io_k8s_client_go//testing:go_default_library",
         "@io_k8s_utils//clock/testing:go_default_library",
         "@io_k8s_utils//pointer:go_default_library",
+        "@org_golang_x_crypto//acme:go_default_library",
     ],
 )
