Adds cmctl update to update certificate request statuses
Signed-off-by: JoshVanL <vleeuwenjoshua@gmail.com>

--- a/cmd/cert-managerctl/app/BUILD.bazel
+++ b/cmd/cert-managerctl/app/BUILD.bazel
@@ -14,6 +14,7 @@ filegroup(
         "//cmd/cert-managerctl/app/cmd:all-srcs",
         "//cmd/cert-managerctl/app/get:all-srcs",
         "//cmd/cert-managerctl/app/request:all-srcs",
+        "//cmd/cert-managerctl/app/update:all-srcs",
         "//cmd/cert-managerctl/app/util:all-srcs",
     ],
     tags = ["automanaged"],
