--- a/cmd/cert-managerctl/app/cmd/BUILD.bazel
+++ b/cmd/cert-managerctl/app/cmd/BUILD.bazel
@@ -9,6 +9,7 @@ go_library(
         "request_cert.go",
         "request_sign.go",
         "root.go",
+        "update.go",
         "version.go",
     ],
     importpath = "github.com/jetstack/cert-manager/cmd/cert-managerctl/app/cmd",
@@ -18,13 +19,15 @@ go_library(
         "//cmd/cert-managerctl/app/client:go_default_library",
         "//cmd/cert-managerctl/app/get:go_default_library",
         "//cmd/cert-managerctl/app/request:go_default_library",
+        "//cmd/cert-managerctl/app/update:go_default_library",
         "//pkg/apis/certmanager:go_default_library",
         "//pkg/apis/certmanager/v1alpha2:go_default_library",
+        "//pkg/apis/meta/v1:go_default_library",
         "//pkg/util:go_default_library",
-        "//vendor/github.com/sirupsen/logrus:go_default_library",
-        "//vendor/github.com/spf13/cobra:go_default_library",
-        "//vendor/github.com/spf13/pflag:go_default_library",
-        "//vendor/k8s.io/apimachinery/pkg/apis/meta/v1:go_default_library",
+        "@com_github_sirupsen_logrus//:go_default_library",
+        "@com_github_spf13_cobra//:go_default_library",
+        "@com_github_spf13_pflag//:go_default_library",
+        "@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library",
     ],
 )
 
