--- a/cmd/cert-managerctl/app/request/BUILD.bazel
+++ b/cmd/cert-managerctl/app/request/BUILD.bazel
@@ -14,9 +14,10 @@ go_library(
         "//cmd/cert-managerctl/app/util:go_default_library",
         "//pkg/api/util:go_default_library",
         "//pkg/apis/certmanager/v1alpha2:go_default_library",
+        "//pkg/apis/meta/v1:go_default_library",
         "//pkg/util/pki:go_default_library",
-        "//vendor/github.com/sirupsen/logrus:go_default_library",
-        "//vendor/k8s.io/apimachinery/pkg/apis/meta/v1:go_default_library",
+        "@com_github_sirupsen_logrus//:go_default_library",
+        "@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library",
     ],
 )
 
