--- a/cmd/cert-managerctl/app/update/BUILD.bazel
+++ b/cmd/cert-managerctl/app/update/BUILD.bazel
@@ -2,31 +2,30 @@ load("@io_bazel_rules_go//go:def.bzl", "go_library")
 
 go_library(
     name = "go_default_library",
-    srcs = [
-        "get.go",
-        "request.go",
-        "types.go",
-        "update.go",
-    ],
-    importpath = "github.com/jetstack/cert-manager/cmd/cert-managerctl/app/apis/cert-managerctl/v1alpha1",
+    srcs = ["update.go"],
+    importpath = "github.com/jetstack/cert-manager/cmd/cert-managerctl/app/update",
     visibility = ["//visibility:public"],
     deps = [
+        "//cmd/cert-managerctl/app/apis/cert-managerctl/v1alpha1:go_default_library",
+        "//cmd/cert-managerctl/app/client:go_default_library",
+        "//pkg/api/util:go_default_library",
         "//pkg/apis/certmanager/v1alpha2:go_default_library",
         "//pkg/apis/meta/v1:go_default_library",
-        "@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library",
+        "//pkg/util/pki:go_default_library",
+        "@com_github_sirupsen_logrus//:go_default_library",
     ],
 )
 
 filegroup(
     name = "package-srcs",
     srcs = glob(["**"]),
-    tags = ["automanaged"],
     visibility = ["//visibility:private"],
+    tags = ["automanaged"],
 )
 
 filegroup(
     name = "all-srcs",
     srcs = [":package-srcs"],
-    tags = ["automanaged"],
     visibility = ["//visibility:public"],
+    tags = ["automanaged"],
 )
