--- a/cmd/cert-managerctl/app/util/BUILD.bazel
+++ b/cmd/cert-managerctl/app/util/BUILD.bazel
@@ -7,7 +7,7 @@ go_library(
     visibility = ["//visibility:public"],
     deps = [
         "//cmd/cert-managerctl/app/apis/cert-managerctl/v1alpha1:go_default_library",
-        "//vendor/k8s.io/apimachinery/pkg/apis/meta/v1:go_default_library",
+        "@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library",
     ],
 )
 
